syntax = "proto3";

package image.defenseunicorns.com;

// where the generated code will be placed
option go_package = "/api/v1/image";


message ErrorResponse {
  string error_message = 1;
}

service ImageTransform {
  rpc ImageTransformHost(TransformRequest) returns (TransformResponse);
  rpc ImageTransformHostWithoutChecksum(TransformRequest) returns (TransformResponse);
}

message TransformRequest {
  string targetHost = 1;
  string srcReference = 2;
}


message TransformResponse {
    string transformedImage = 1;
}